test/library/standard/List/bradc/emptySeq3.good
emptySeq3.chpl:3: error: unresolved call 'LinkedList(int(64)).init=(nil)'
$CHPL_HOME/modules/standard/LinkedLists.chpl:77: note: candidates are: LinkedList.init=(l: this.type )
$CHPL_HOME/modules/standard/LinkedLists.chpl:53: note:                 LinkedList.init=(other: this.type)
